--- a/puzzle_android/proj.android/.classpath
+++ b/puzzle_android/proj.android/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/egret.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
