--- a/tools/appBuilder/build.properties
+++ b/tools/appBuilder/build.properties
@@ -1,20 +1,19 @@
-#基础配置
-
 #项目名称，也是生成的apk与ipa文件名
-name = puzzle
+name=puzzle
 #windows拓展名
 #.exe=.exe
 #.bat=.bat
 #mac平台拓展名
 exe=
 .bat=
+#basedir=命令行运行当前所处目录
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> ios相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+xcodebuild=
 
-
-#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>android相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> android相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 #android_sdk_home
-java-home=
+java-home=/library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home
 sdk-folder=/users/coderk/tools/android/sdk
 sdk-platform-folder=${sdk-folder}/build-tools/android-4.4
 sdk-tools=${sdk-folder}/tools
@@ -23,10 +22,20 @@ sdk-platform-tools=${sdk-platform-folder}/tools
 aapt=${sdk-platform-tools}/aapt${exe}
 aidl=${sdk-platform-tools}/aidl${exe}
 dx=${sdk-platform-tools}/dx${.bat}
-#sdk-3.0之后删除了apkbuilder，直接使用sdklib.jar 
-apkbuilder=${sdk-tools}/apkbuilder${.bat}
+#sdk-3.0之后删除了apkbuilder，直接使用sdklib.jar
+sdklib=${sdk-tools}/lib/sdklib.jar
 #JDK1.8 命令：(JDK1.8  算法发生了变化，需要指定 -sigalg 和 -digestalg)
 #jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore android.keystore my_apk_sign.apk my_apk_unsign.apk alias_name
-#JDK1.6命令：
+#JDK <1.8 命令：
 #jarsigner -verbose -keystore android.keystore my_apk_sign.apk my_apk_unsign.apk alias_name
 jarsigner="${java-home}/bin/jarsigner${.exe}
+
+#需要编译的jar文件列表
+android-jar=${sdk-folder}/android-19/android.jar
+egret-jar=
+android-support-v4-jar=
+framework-aidl=${sdk-folder}/android-19/framework.aidl
+
+#清单文件
+#manifest-xml=AndroidManifest.xml
+#定义临时目录
