--- a/tools/appBuilder/build.properties
+++ b/tools/appBuilder/build.properties
@@ -1,5 +1,7 @@
 #项目名称，也是生成的apk与ipa文件名
 name=puzzle
+#语义化规则版本号
+version=
 #windows拓展名
 #.exe=.exe
 #.bat=.bat
@@ -7,9 +9,11 @@ name=puzzle
 exe=
 .bat=
 #basedir=命令行运行当前所处目录
+ios-folder=../../puzzle_ios/
+android-folder=../../puzzle_android/
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> ios相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-xcodebuild=
+
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> android相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 #android_sdk_home
