--- a/tools/appBuilder/build.properties
+++ b/tools/appBuilder/build.properties
@@ -1,45 +1,4 @@
 #项目名称，也是生成的apk与ipa文件名
 name=puzzle
 #语义化规则版本号
-version=
-#windows拓展名
-#.exe=.exe
-#.bat=.bat
-#mac平台拓展名
-exe=
-.bat=
-#basedir=命令行运行当前所处目录
-ios-folder=../../puzzle_ios/
-android-folder=../../puzzle_android/
-
-#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> ios相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-
-
-#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> android相关配置 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-#android_sdk_home
-java-home=/library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home
-sdk-folder=/users/coderk/tools/android/sdk
-sdk-platform-folder=${sdk-folder}/build-tools/android-4.4
-sdk-tools=${sdk-folder}/tools
-sdk-platform-tools=${sdk-platform-folder}/tools
-#使用到的命令，当前系统为mac osX
-aapt=${sdk-platform-tools}/aapt${exe}
-aidl=${sdk-platform-tools}/aidl${exe}
-dx=${sdk-platform-tools}/dx${.bat}
-#sdk-3.0之后删除了apkbuilder，直接使用sdklib.jar
-sdklib=${sdk-tools}/lib/sdklib.jar
-#JDK1.8 命令：(JDK1.8  算法发生了变化，需要指定 -sigalg 和 -digestalg)
-#jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore android.keystore my_apk_sign.apk my_apk_unsign.apk alias_name
-#JDK <1.8 命令：
-#jarsigner -verbose -keystore android.keystore my_apk_sign.apk my_apk_unsign.apk alias_name
-jarsigner="${java-home}/bin/jarsigner${.exe}
-
-#需要编译的jar文件列表
-android-jar=${sdk-folder}/android-19/android.jar
-egret-jar=
-android-support-v4-jar=
-framework-aidl=${sdk-folder}/android-19/framework.aidl
-
-#清单文件
-#manifest-xml=AndroidManifest.xml
-#定义临时目录
+version=1.0.0
