--- a/tools/appBuilder/android.properties
+++ b/tools/appBuilder/android.properties
@@ -1,13 +1,15 @@
+#android配置
+
 #windows拓展名
 #.exe=.exe
 #.bat=.bat
 #mac平台拓展名
 .exe=
 .bat=
-#android工程根目录，这里使用绝对路径，不使用相对路径的原因是ant本身的copy操作等支持相对路径，但是build中调用的一些命令可能不支持
+#android工程根目录，这里使用绝对路径，不使用相对路径的原因是ant本身的copy等操作支持相对路径，但是调用的一些其他一些命令可能不支持
 root=/Users/coderk/documents/egret-app/puzzle_android/proj.android
 
-#签名密钥
+#签名证书，这里即可以使用相对路径，也可以是绝对路径
 keystore=../keys/release.keystore
 keypass=123456
 storepass=123456
